# caps

./: .gitignore  CMakeLists.txt  README.md  abstract.tex  bib.bib  paper.tex
analysis/: mafsa_analysis.ipynb
analysis/.ipynb_checkpoints/: mafsa_analysis-checkpoint.ipynb
analysis/notebooks/: add_exp_count.ipynb  source_count.ipynb
code/: README.md
code/mafsa/: Makefile  edge_distribution.py  mafsa.cc  mafsa.h  mafsabuild.cc
code/utils/: Makefile  charcount.cc  filter_names.py  get_alexa_names.py  get_dns_names.py  hostname.py  internationalize.py  reverse_names.py
data/: stats.txt
data/mafsa_reports/: 100013_564693_2077621_664163.gv.report.txt  100685_563403_2083265_663498.gv.report.txt  102722_573546_2128341_675654.gv.report.txt  10412_84220_215916_94626.gv.report.txt  104805_585332_2174197_689444.gv.report.txt  105720_587074_2189634_692136.gv.report.txt  107385_595139_2224883_701857.gv.report.txt  108860_598775_2250674_706902.gv.report.txt  110604_612387_2293774_722259.gv.report.txt  111875_619311_2321466_730484.gv.report.txt  113887_626386_2362368_739586.gv.report.txt  114725_628277_2376725_742288.gv.report.txt  115556_629758_2390616_744525.gv.report.txt  118136_642308_2443658_759669.gv.report.txt  (+85 more)
dependencies/: CMakeLists.txt
dependencies/cxxopts/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
dependencies/sdsl/: CMakeLists.txt
fig/: ct.graffle
packaging/: CMakeLists.txt
sec/: background.tex  conclusion.tex  evaluation.tex  intro.tex  overview.tex  policy.tex  problem.tex  related.tex  signaling.tex
setup/: acros.tex  commands.tex  main.tex  packages.tex
src/: CMakeLists.txt
src/signaling/: CMakeLists.txt  CTestTestfile.cmake  Makefile  build_lexicon  build_lexicon.cc  cmake_install.cmake  lexicon entropy with label size and codebook size 1% data.ipynb  lexicon entropy with label size and codebook size 5% data.ipynb  lexicon entropy with label size and codebook size.ipynb  lexicon entropy.ipynb  out.txt  out1.txt  out_01.txt  storage_calculations.py
src/signaling/client/: succinct_trie.cc  succinct_trie.h
src/signaling/common/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compare.h  defs.h  hash.h  io_option.h  iterable.h  measure_time.h  pointer_comparator.h  powerset.h  type_debug.h
src/signaling/common/bitvector/: CMakeLists.txt
src/signaling/encoding/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bitstream.cc  bitstream.h  bitvector_io.h  cmake_install.cmake  fsa_encoder.cc  fsa_encoder.h  fsa_huffman_encoder.cc  fsa_huffman_encoder.h  huffman.h  integer.h
src/signaling/encoding/bitvector/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bitvector.h  cmake_install.cmake
src/signaling/encoding/coder/: CMakeLists.txt  CTestTestfile.cmake  Makefile  binary_coder.h  char_coder.h  char_huffman_coder.h  cmake_install.cmake  coder.h  delta_coder.h  gamma_coder.h  huffman_coder.h  mixed_huffman_coder.h  partial_huffman_coder.h  signed_int_coder.h  small_int_coder.h  string_coder.h  unary_coder.h  unary_coder_micah_practice.h
src/signaling/encoding/fsa_encoder/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fsa_char_encoder.h  fsa_char_huffman_encoder.h  fsa_encoder.h  fsa_huffman_encoder.h  fsa_mixed_huffman_encoder.h  fsa_partial_huffman_encoder.h
src/signaling/graph/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  connected_component.cc  connected_component.h  graph.cc  graph.h  graph_search.h  node.cc  node.h  ordering.cc  ordering.h  visitor.h
src/signaling/graph/component/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  connected_component.cc  connected_component.h  connected_component_utils.cc  connected_component_utils.h  transitive_path_visitor.cc  transitive_path_visitor.h
src/signaling/graph/labeled_graph/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  graph.cc  graph.h
src/signaling/graph/node/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  node.cc  node.h
src/signaling/graph/traversal/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  graph_search.h
src/signaling/graph/visitor/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  visitor.cc  visitor.h
src/signaling/lexicon/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fsa_lexicon.cc  fsa_lexicon.h  lexicon.h  lexicon_run.cc  set_lexicon.cc  set_lexicon.h
src/signaling/lexicon/fsa_lexicon/: CMakeLists.txt  CTestTestfile.cmake  Makefile  accept_string_visitor.cc  accept_string_visitor.h  cmake_install.cmake  fsa_lexicon.cc  fsa_lexicon.h  node_right_language.cc  node_right_language.h
src/signaling/signal_authority/: huffmanbuild.cc  mafsa.h  triebuild.cc
table/: api.tex
tests/: CMakeLists.txt
tests/signaling/common/: CMakeLists.txt  measure_time_test.cc  powerset_test.cc
tests/signaling/encoding/: CMakeLists.txt  bitstream_test.cc  huffman_test.cc  integer_test.cc
tests/signaling/encoding/bitvector/: CMakeLists.txt  bitvector_test.cc
tests/signaling/encoding/coder/: CMakeLists.txt  huffman_test.cc  unary_coder_micah_practice_test.cc
tests/signaling/encoding/fsa_encoder/: CMakeLists.txt
tests/signaling/encoding/integer/: CMakeLists.txt  integer_test.cc
tests/signaling/graph/: CMakeLists.txt  connected_component_test.cc  labeled_graph_test.cc  node_test.cc
tests/signaling/graph/component/: CMakeLists.txt  connected_component_test.cc
tests/signaling/graph/labeled_graph/: CMakeLists.txt  labeled_graph_test.cc
tests/signaling/graph/node/: CMakeLists.txt  node_test.cc
tests/signaling/lexicon/: CMakeLists.txt  fsa_lexicon_test.cc  lexicon_test.cc  set_lexicon_test.cc
tools/: compress_graph.py  compute_dest_size.py  count_bigquery_lines.sh  dns_info_parser.py  download_names_via_bq.sh  edge_label_dist.py  entropy.py  extract_reverse_dns_names.sh  get_dns_names.py  graph_censys_series.py  graph_stats.py  graph_wrapper.py  internationalize.py  sample.py  tlds.py  validate_names.py  validate_sort_dedup_bigquery_names.sh  write_graph.py
(+315 files in other folders)
